--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
       "lint": "next lint"
    },
    "dependencies": {
-      "@headlessui/react": "^1.7.15",
-      "@types/node": "20.2.6",
-      "@types/react": "18.2.10",
-      "@types/react-dom": "18.2.4",
-      "autoprefixer": "10.4.14",
-      "next": "13.4.4",
-      "postcss": "8.4.24",
-      "react": "18.2.0",
-      "react-dom": "18.2.0",
-      "tailwindcss": "3.3.2",
-      "typescript": "5.1.3"
+      "@headlessui/react": "^1.7.17",
+      "next": "^13.5.4",
+      "react": "^18.2.0",
+      "react-dom": "^18.2.0",
+      "typescript": "^5.2.2"
+   },
+   "devDependencies": {
+      "@types/node": "^20.8.4",
+      "@types/react": "^18.2.28",
+      "@types/react-dom": "^18.2.13",
+      "autoprefixer": "^10.4.16",
+      "postcss": "^8.4.31",
+      "tailwindcss": "^3.3.3"
    }
 }
